.vscode/allianceuat_compare/force-app/main/default/objects/ShiftImportLog__c/ShiftImportLog__c.object-meta.xml
<CustomObject>
    <label>Shift Import Log</label>
    <nameField>
        <displayFormat>Log-{0000}</displayFormat>
        <label>Shift Import Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shift Import Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>