.vscode/allianceuat_compare/force-app/main/default/objects/ShiftImportLog__c/fields/Error_Deletions__c.field-meta.xml
<CustomField>
    <fullName>Error_Deletions__c</fullName>
    <label>Error Deletions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>