.vscode/allianceuat_compare/force-app/main/default/objects/ShiftImportLog__c/fields/Errors__c.field-meta.xml
<CustomField>
    <fullName>Errors__c</fullName>
    <label>Errors</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>