.vscode/allianceuat_compare/force-app/main/default/objects/ShiftImportLog__c/fields/Success_Deletions__c.field-meta.xml
<CustomField>
    <fullName>Success_Deletions__c</fullName>
    <label>Success Deletions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>