.vscode/allianceuat_compare/force-app/main/default/objects/ShiftImportLog__c/fields/Successes__c.field-meta.xml
<CustomField>
    <fullName>Successes__c</fullName>
    <label>Successes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>